--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: dci
-Title: What the Package Does (One Line, Title Case)
+Title: Calculates the dendritic connectivity index in river networks
 Version: 0.0.0.9000
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
