--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ BugReports: https://github.com/aarkilanian/dci/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    magrittr
