--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,12 @@ BugReports: https://github.com/aarkilanian/dci/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-Imports: 
-    sfnetworks,
+Imports:
+    rlang,
+    tibble,
+    dplyr,
     magrittr,
-    sf
+    units,
+    sf,
+    tidygraph,
+    sfnetworks
