docs: import .data from rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,4 +24,5 @@ export(path_to_root)
 export(river_net)
 export(split_rivers_at_points)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(sfnetworks,activate)
