--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ RoxygenNote: 7.1.2
 URL: https://github.com/aarkilanian/dci
 BugReports: https://github.com/aarkilanian/dci/issues
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports:
@@ -23,3 +25,4 @@ Imports:
     sf,
     tidygraph,
     sfnetworks
+VignetteBuilder: knitr
