docs: new gather_neighb function docs and NAMESPACE changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(enforce_dendritic)
 export(export_dci)
 export(gather_dci)
 export(gather_dist)
+export(gather_neighb)
 export(gather_perm)
 export(import_points)
 export(import_rivers)
