--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: dci
-Title: Calculate the Dendritic Connectivity in River Networks
+Title: Calculate the Dendritic Connectivity Index in River Networks
 Version: 0.0.0.9000
 Authors@R: 
     person("Alex", "Arkilanian", , "a.arkilanian@gmail.com", role = c("aut", "cre"),
